--- a/res/sourceview/wolfram.lang
+++ b/res/sourceview/wolfram.lang
@@ -25,8 +25,8 @@
 	<styles>
 		<style id="comment" _name="Comment" map-to="def:comment"/>
 		<style id="string" _name="String" map-to="def:string"/>
-		<style id="keyword" _name="Keyword" map-to="def:function"/>
-		<style id="argument" _name="Argument" map-to="def:keyword"/>
+		<style id="keyword" _name="Keyword" map-to="def:keyword"/>
+		<style id="argument" _name="Argument" map-to="def:argument"/>
 		<style id="error" _name="Error" map-to="def:error"/>
 	</styles>
 	<definitions>
@@ -5235,9 +5235,9 @@
 		<context id="wolfram">
 			<include>
 				<context ref="block-comment"/>
-				<!--context ref="keywords1"/>
+				<context ref="keywords1"/>
 				<context ref="keywords2"/>
-				<context ref="keywords3"/-->
+				<context ref="keywords3"/>
 				<context ref="string"/>
 				<context ref="argument"/>
 				<context ref="error"/>
