--- a/res/sourceview/wolfram2.lang
+++ b/res/sourceview/wolfram2.lang
@@ -40,8 +40,8 @@
 			<end>(?=[^0-9a-zA-Z])</end>
 		</context>
 		<context id="string" style-ref="string" end-at-line-end="false">
-			<start>L?"</start>
-			<end>"</end>
+			<start>"</start>
+			<end>[^\\]"</end>
 		</context>
 		<context id="error" style-ref="error">
 			<keyword>[0-9a-zA-Z]*::[0-9a-zA-Z]*</keyword>
