do not insert ellipsis/comment on locked cell

--- a/res/sourceview/wolfram.lang
+++ b/res/sourceview/wolfram.lang
@@ -40,7 +40,7 @@
 		</context>
 		<context id="string" style-ref="string" end-at-line-end="true">
 			<start>"</start>
-			<end>[^\\]"</end>
+			<end>"</end>
 		</context>
 		<context id="error" style-ref="error">
 			<keyword>[0-9a-zA-Z]*::[0-9a-zA-Z]*</keyword>
