--- a/res/sourceview/wolfram2.lang
+++ b/res/sourceview/wolfram2.lang
@@ -41,7 +41,7 @@
 		</context>
 		<context id="string" style-ref="string" end-at-line-end="false">
 			<start>"</start>
-			<end>[^\\]"</end>
+			<end>"</end>
 		</context>
 		<context id="error" style-ref="error">
 			<keyword>[0-9a-zA-Z]*::[0-9a-zA-Z]*</keyword>
